# ut-app-rust-template

./: LICENSE.MIT  README.md  cookiecutter.json
{{cookiecutter.app_name}}/: .gitignore  Cargo.toml  clickable.json
{{cookiecutter.app_name}}/click/: manifest.json  {{cookiecutter.app_name}}.desktop
{{cookiecutter.app_name}}/src/: main.rs
